Added License file, ReadME file, added progress text

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             <div class="quiz-next">
                 <button id="btn-next" class="primary-btn">Next</button>
             </div>
+            <div class="quiz-footer">
+                <p id="quiz-status">0/10</p>    
+            </div>
         </div>
     </div>
     
